# petgame

./: CMakeLists.txt  LICENSE  README.md
docs/: module.md
resource/cfg/: pet.json
src/: Application.cpp  Application.h  Game.cpp  Game.h  PetGame.h  main.cpp
src/controller/: StartUpController.cpp  StartUpController.h
src/system/: BaseSystem.h  BattleInfo.cpp  BattleInfo.h  BattleRel.cpp  BattleRel.h  BattleSystem.cpp  BattleSystem.h  ConfigSystem.cpp  ConfigSystem.h  StartMenuSystem.cpp  StartMenuSystem.h  StatusSystem.cpp  StatusSystem.h  SystemManager.h
src/utils/: Language.cpp  Language.h  Path.cpp  Path.h
src/view/: BaseView.h  StartUpView.cpp  StartUpView.h
